# Deploy_Rust_application_to_AWS_EC2

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/db/: connection.rs  mod.rs
src/errors/: mod.rs
src/handlers/: mod.rs  user_handlers.rs
src/models/: mod.rs  user.rs
